[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/StonePlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/BlueShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PlatformBlue.gd" type="Script" id=3]
[ext_resource path="res://scenes/ObjectiveArea.gd" type="Script" id=4]
[ext_resource path="res://scenes/MainLevel.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.375, 39.5 )

[node name="MainLevel" type="Node"]
script = ExtResource( 5 )

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2( 35, 565 )
script = ExtResource( 3 )

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource( 1 )]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource( 1 )]
position = Vector2( 70, 0 )

[node name="BlueShip" parent="." instance=ExtResource( 2 )]
position = Vector2( 72.7009, 421.901 )

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2( 70.625, 40 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.0
margin_top = 12.0
margin_right = 67.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( -471, -313 )
text = "Next Level"

[node name="Button2" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = 11.0
margin_right = -25.0
margin_bottom = 31.0
text = "Replay"

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -45.0
margin_right = -43.0
margin_bottom = -31.0
rect_scale = Vector2( 3.21781, 3.21781 )
text = "YOU WIN"
percent_visible = 0.0

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
[connection signal="game_end" from="ObjectiveArea" to="PlatformBlue" method="_on_ObjectiveArea_game_end"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_Button2_pressed"]
